add clearInterval to keep the timer from continuing to proc on new loops

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,11 @@ header a:hover {
     text-shadow: 0 0 5px rgb(255, 156, 255);
 }
 
+header p {
+    color: blue;
+    font-size: 1.5em;
+}
+
 #container {
     display: flex;
     align-items: center;
