--- a/assets/style.css
+++ b/assets/style.css
@@ -68,7 +68,7 @@ h2 {
 #quiz-box p {
     color: rgb(131, 131, 131);
     font-size: 1.5em;
-    text-align: left;
+    text-align: center;
     margin: .6em;
     padding-top: .3em;
 
@@ -95,4 +95,20 @@ h2 {
     width: 30%;
     text-align: center;
     margin-top: 2em;
+}
+
+@media screen and (max-width: 480px) {
+
+    header p {
+        font-size: 80%;
+    }
+
+    #quiz-box p {
+        font-size: 80%;
+    }
+
+    .button {
+        font-size: 80%;
+        width: 100%;
+    }
 }
